tests/unit-fail-compilation/j014d.ref
j014d.c:3:8: error: Potential negative zero produced via bitwise operations (this could be a false positive).
  Undefined behavior (UB-CEB12). See C11 sec. 6.2.6.2:4, J.2:1 item 14
Translation failed (config dumped). Run kcc -d j014d.c to see commands run.
