tests/unit-fail-compilation/j014d.c
#include <limits.h>
int main(void) {
      (99 ^ ~99); // Negative zero for sign/mag and two's complement.
      return 0;
}
